Sort out marketing_subscribe and tweaks to tyre/wheel info on customer record

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "thelar/fbf-custom-zoho-woo",
+  "name": "thelar/r",
   "description": "",
   "keywords": ["wordpress", "plugin"],
   "homepage": "https://github.com/thelar/fbf-custom-zoho-woo",
