error in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "thelar",
+  "name": "thelar/fbf-custom-zoho-woo",
   "description": "",
   "keywords": ["wordpress", "plugin"],
   "homepage": "https://github.com/thelar/fbf-custom-zoho-woo",
